# Energy-RAG

./: Dockerfile  docker-compose.yml
1. 환경세팅하기/: logger.py  metadata.py  nas.py  slack.py
2. 파일 불러오기/: naver_research.py  petronet_crawling.py  renewl_research.py
code/: make_chain.py  webpage.py
rag/: .gitignore  Dockerfile.app  docker-compose.yml  make_chain.py  pyproject.toml  state.py
rag/app/: app.py
rag/core/: graph.py  settings.py  state.py
rag/db/: backup_to_nas.py  deps.py  migrate_to_nas.py  start_nas_postgres.py
rag/db_init/: Dockerfile  db_config.py
rag/ingest/: bulk_ingest.py  etl.py  pdf_to_chunks.py
rag/nodes/: explainer.py  reflection_agent.py  retriever.py  router.py  supervisor.py  table_agent.py  text_agent.py
rag/postgres/: Dockerfile
rag/web_crawling/: energy_statistc.py  logger.py  nas.py
